--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,11 @@ site_name: Findify
 site_favicon: favicon.png
 pages:
     - Home: index.md
-    - Search API:
-        - 'Get started': 'search-api/getstarted.md'
-    - Merchant JS:
-        - 'Get started': 'merchant-js/getstarted.md'
+    - Integrations:
+        - 'Shopify': 'integrations/shopify.md'
+        - 'Magento': 'integrations/magento.md'
+        - 'Custom': 'integrations/custom.md'
+    - 'M.JS':
+        - 'Get started': 'merchant-js/index.md'
+    - Feed:
+        - 'Get started': 'feed/index.md'
